Minor layout issues

--- a/static/style/kinna.css
+++ b/static/style/kinna.css
@@ -30,8 +30,9 @@ html {
 body {
     margin: 0 auto;
     /*background-image: linear-gradient(#f9fff, #f5fff);*/
-    background: url(/static/images/background_1.1.2.png);
-    background-size: cover;
+    /* background: url(/static/images/background_1.1.2.png);
+       background-size: cover; */
+    background-color: #f7feff;
     height: 100%;
 }
 
@@ -77,7 +78,8 @@ hr {
     left: 50%;
     transform: translate(-50%, 0);
     z-index: 300;
-    background-image: url(/static/images/mask_1.1.3.png);
+    background-image: url(/static/images/mask_1.1.4.png);
+    background-repeat: repeat-x;
 }
 
 #nav-center {
@@ -109,8 +111,6 @@ a#show_nav {
 	margin-right: 50px;
 	background-image: url(/static/images/menu.png);
 }
-
-
 
 
 .link .details  {
@@ -285,7 +285,7 @@ a#show_nav {
 
 #nav {
 	position:  relative;
-	top: -4.5rem;
+	top: -4.1rem;
 	padding-top: 47px;
     padding-left: 10rem;
 }
@@ -299,7 +299,6 @@ a#show_nav {
     margin: 0;
     padding: 0;
     border: none;
-    /*     float:  right; */
 }
 
 
@@ -315,43 +314,32 @@ a#show_nav {
 	padding: 0;
 	}
 
-
-#nav ul.menu_sub {
-	background: white;
-	box-shadow: 0px 3px 8px 8px #fff;
-}
-
-#nav ul#menu a.selected {}
-
-#nav ul#menu a:hover {
-	font-weight: 600;
-	padding: 0.4rem 1.0rem 0;
-	background-color: white;
-}
-
 #nav ul#menu a {
 	text-align:  left;
 	text-decoration: none;
-	width: 3.2rem;
 	height: 1.8rem;
-	padding: 0.4rem 1.0rem 0;
+	padding: 0 2.8rem 0 0;
 	display: inline-block;
-	color: #515151;
 }
+
+#nav ul#menu a:hover {
+	font-weight: 600;
+}
+
 
 #show_nav, .show_nav {
 	display: none;
 }
 
-#mask, .mask {
-	z-index: 5;
-	height: 100%;
-	width: 100%;
-	position: fixed;
-	top: 0;
-	left:  0;
-	display: none;
-}
+    /* #mask, .mask {
+	   z-index: 5;
+	   height: 100%;
+	   width: 100%;
+	   position: fixed;
+	   top: 0;
+	   left:  0;
+	   display: none;
+       } */
 
 /* @group Dropdowns */
 
@@ -454,6 +442,7 @@ ul#menu li a:hover, ul#menu ul li a:hover {
 
 @media only screen and (max-width: 760px){
     #menuframe {
+        max-width: 100%;
         height: 150px;
         background-position: center bottom;
         left: 0;
